# docker-review

./: Cargo.toml  README.md  RELEASING.md  docker-review-v0.2.0-linux-amd64  install.sh
src/: lib.rs  main.rs
src/analyzer/: mod.rs
src/cli/: args.rs  mod.rs
src/output/: json.rs  mod.rs  terminal.rs
src/parser/: compose.rs  dockerfile.rs  dockerignore.rs  mod.rs
src/rules/: mod.rs  registry.rs  rule.rs  severity.rs
src/rules/compose/: hardcoded_secrets.rs  latest_tag.rs  mod.rs  privileged.rs  resource_limits.rs  restart_policy.rs
src/rules/dockerfile/: curl_bash.rs  healthcheck.rs  large_base_image.rs  latest_tag.rs  layer_optimization.rs  layer_order.rs  mod.rs  multistage.rs  no_dockerignore.rs  root_user.rs  secrets_in_env.rs  version_pinning.rs
src/scoring/: mod.rs
tests/fixtures/: bad_compose.yml  bad_dockerfile  good_compose.yml  good_dockerfile
