[package]
name = "docker-review"
version = "0.1.0"
edition = "2021"
authors = ["Docker Review Team"]
description = "A fast CLI tool for analyzing Dockerfiles and docker-compose files"
license = "MIT"
repository = "https://github.com/docker-review/docker-review"
keywords = ["docker", "dockerfile", "lint", "devops", "cli"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "4", features = ["derive", "color"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
regex = "1"
colored = "2"
thiserror = "1"
once_cell = "1"

[dev-dependencies]
insta = { version = "1", features = ["yaml"] }
pretty_assertions = "1"
tempfile = "3"

[[bin]]
name = "docker-review"
path = "src/main.rs"

[profile.release]
lto = true
codegen-units = 1
strip = true
